[gd_scene load_steps=9 format=3 uid="uid://cdt0ka2j20jkx"]

[ext_resource type="Texture2D" uid="uid://dp5npuqf212nb" path="res://resources/dialog_bg.png" id="1_p0nbi"]
[ext_resource type="Script" path="res://dialog_box.gd" id="2_gmnyd"]
[ext_resource type="FontFile" uid="uid://c3j6oa1sotgmy" path="res://resources/monogram.ttf" id="2_rps1j"]
[ext_resource type="Texture2D" uid="uid://cvr8jqmuodqho" path="res://resources/button.png" id="3_uacx2"]
[ext_resource type="Texture2D" uid="uid://d2mewpgcxrivn" path="res://resources/button_hovered.png" id="4_aasse"]

[sub_resource type="LabelSettings" id="LabelSettings_do457"]
font = ExtResource("2_rps1j")
font_size = 96
font_color = Color(0.843137, 0.717647, 0.34902, 1)

[sub_resource type="LabelSettings" id="LabelSettings_t2aar"]
font = ExtResource("2_rps1j")
font_size = 64
font_color = Color(0.843137, 0.717647, 0.34902, 1)

[sub_resource type="LabelSettings" id="LabelSettings_mal23"]
font = ExtResource("2_rps1j")
font_size = 64
font_color = Color(0, 0, 0, 1)

[node name="DialogBox" type="Node"]
script = ExtResource("2_gmnyd")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.705882)

[node name="DialogBoxFrame" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -180.0
offset_right = 320.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_p0nbi")

[node name="TitleLabel" type="Label" parent="DialogBoxFrame"]
layout_mode = 0
offset_left = 73.0
offset_top = -4.0
offset_right = 573.0
offset_bottom = 75.0
label_settings = SubResource("LabelSettings_do457")
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="DialogBoxFrame"]
layout_mode = 0
offset_left = 26.0
offset_top = 57.0
offset_right = 619.0
offset_bottom = 273.0
label_settings = SubResource("LabelSettings_t2aar")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="CenterButton" type="TextureButton" parent="DialogBoxFrame"]
visible = false
layout_mode = 0
offset_left = 216.0
offset_top = 284.0
offset_right = 424.0
offset_bottom = 342.0
texture_normal = ExtResource("3_uacx2")
texture_hover = ExtResource("4_aasse")

[node name="ButtonLabel" type="Label" parent="DialogBoxFrame/CenterButton"]
layout_mode = 0
offset_left = 6.0
offset_right = 206.0
offset_bottom = 54.0
label_settings = SubResource("LabelSettings_mal23")
horizontal_alignment = 1

[node name="LeftButton" type="TextureButton" parent="DialogBoxFrame"]
visible = false
layout_mode = 0
offset_left = 92.0
offset_top = 284.0
offset_right = 300.0
offset_bottom = 342.0
texture_normal = ExtResource("3_uacx2")
texture_hover = ExtResource("4_aasse")

[node name="ButtonLabel" type="Label" parent="DialogBoxFrame/LeftButton"]
layout_mode = 0
offset_left = 6.0
offset_right = 206.0
offset_bottom = 54.0
label_settings = SubResource("LabelSettings_mal23")
horizontal_alignment = 1

[node name="RightButton" type="TextureButton" parent="DialogBoxFrame"]
visible = false
layout_mode = 0
offset_left = 340.0
offset_top = 284.0
offset_right = 548.0
offset_bottom = 342.0
texture_normal = ExtResource("3_uacx2")
texture_hover = ExtResource("4_aasse")

[node name="ButtonLabel" type="Label" parent="DialogBoxFrame/RightButton"]
layout_mode = 0
offset_left = 6.0
offset_right = 206.0
offset_bottom = 54.0
label_settings = SubResource("LabelSettings_mal23")
horizontal_alignment = 1
